<resources>
    <string name="app_name">Omrant</string>
    <string name="slogan">Quản lý nhà hàng của bạn dễ hơn bao giờ hết!</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="radio_type_table_normal">Normal</string>
    <string name="radio_type_table_vip">VIP</string>
    <string name="radio_status_space">Trống</string>
    <string name="radio_status_using">Đang sử dụng</string>
    <string name="radio_capacity_2">2</string>
    <string name="radio_capacity_4">4</string>
    <string name="radio_capacity_6">6</string>
    <string name="delete">Xóa</string>
</resources>
